--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="manifest" href="manifest.webmanifest">
+
+  <script type="module" src="source/root-app.js"></script>
   <title>Lit Todo</title>
 </head>
 <body>
-  Test
+  <root-app></root-app>
+  maaan
 </body>
 </html>
